--- a/src/Components/Filters.css
+++ b/src/Components/Filters.css
@@ -6,9 +6,12 @@
     margin: 1rem;
     padding: 10px;
     display: flex;
-    margin-left: 25px;
+    margin-left: 20px;
 }
 
+.clear:hover, .apply:hover, .cross:hover{
+    cursor: pointer;
+}
 .item{
     background-color: gray;
     margin: 3px;
@@ -23,18 +26,33 @@
 }
 .display{
     border: 1px solid grey;
-    border-radius: 1rem;
     padding: 10px;
     margin: 1rem;
     width: 300px;
-    box-shadow: 3px 3px #888888;
-    
+    box-shadow: 5px 10px 15px #888888;
+    position: fixed;
+    background-color: white;
     
 }
+.top-part{
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+
 .filters{
     margin: 2rem;
 }
 .select{
     border-color: rgb(133, 133, 196);
-    border-radius: 1rem;
+    border-radius: 5px;
+}
+.dealbutton{
+    background-color: white;
+    height: auto;
+    width: 220px;
+    height: 50px;
+    margin-left: 30px;
+    margin-top: 20px;
+
 }
