--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,8 +1,47 @@
-/* .header{
-    background-color: rgb(224, 220, 220);
-} */
-.header{
-    background-color: white;
+
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+
+.mainheader{
+    background-color: rgb(255,255,255);
     height: 50px;
-    box-shadow: 0px 2px 5px 0px;
+    box-shadow: 5px 5px 5px #d8d6d6;
+    display: flex;
+    justify-content: space-between;
 }
+
+.sitename{
+    justify-content: center;
+    margin: 0.7rem;
+    font-family: Abril Fatface;
+    font-size: 25px;
+}
+.gift-filters{
+    margin: 0.7rem;
+    border: 1px solid rgb(212,37,102);
+    border-radius: 5px;
+    background-color: white;
+    padding: 5px;
+    height: 30px;
+    margin-left: 2rem;
+    /* padding-right: 20px; */  
+}
+
+.sort-by{
+        margin: 0.7rem;
+        border: 1px solid rgb(212,37,102);
+        border-radius: 5px;
+        background-color: white;
+        padding: 5px;
+        height: 30px;
+        margin-left: 2rem;
+        /* padding-right: 20px; */  
+    
+}
+
+.right-icons{
+    margin: 1rem;
+    display: flex;
+    column-gap: 20px;
+    margin-right: 2rem;
+}
+
