--- a/src/Components/Filters.css
+++ b/src/Components/Filters.css
@@ -11,6 +11,7 @@
 
 .clear:hover, .apply:hover, .cross:hover{
     cursor: pointer;
+    background-color: rgba(233, 52, 91, 0.752);
 }
 .item{
     background-color: gray;
@@ -54,5 +55,6 @@
     height: 50px;
     margin-left: 30px;
     margin-top: 20px;
+    margin-bottom: 10px;
 
 }
