--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -4,6 +4,7 @@
     background-color: rgb(212,39,103);
     padding: 10px 20px 10px 0px; 
     justify-content: space-between;
+    color: white;
 }
 
 .signin{
