update sortby width

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -33,6 +33,7 @@
         background-color: white;
         padding: 5px;
         height: 30px;
+        width: 80px;
         margin-left: 2rem;
         /* padding-right: 20px; */  
     
