--- a/src/Components/Body.css
+++ b/src/Components/Body.css
@@ -1,3 +1,36 @@
 .mainbody{
     margin: 2rem;
+    display: flex;
+    column-gap: 15px;
+}
+
+.filtername{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 5px;
+    padding: 3px;
+    background-color: #E8EFF1;
+}
+
+.sortbyname{
+   display: flex;
+   justify-content: space-between;
+    align-items: center;
+    column-gap: 5px;
+    padding: 3px;
+    background-color: #E8EFF1;
+}
+
+.cross{
+    /* border: 1px solid black; */
+    height: 15px;
+    width:  18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100% ;
+    background-color: #7bb3c1;
+    font-size: larger;
+    padding-bottom: 4px;
 }
