--- a/src/Components/Filters.css
+++ b/src/Components/Filters.css
@@ -4,10 +4,10 @@
 
 
 .both-buttons{
-    margin: 1rem;
     padding: 10px;
     display: flex;
     margin-left: 20px;
+    justify-content: center;
 }
 .apply, .clear{
     background-color: #266270;
@@ -36,9 +36,10 @@
 }
 .display{
     border: 1px solid grey;
-    padding: 10px;
-    margin: 1rem;
-    width: 300px;
+    padding: 30px;
+    margin-left: 1rem;
+
+    width: 350px;
     box-shadow: 5px 10px 15px #888888;
     position: fixed;
     background-color: white;
@@ -60,7 +61,7 @@
 .dealbutton{
     background-color: #F5F5F5;
     height: auto;
-    width: 220px;
+    width: 280px;
     height: 50px;
     margin-left: 30px;
     margin-top: 20px;
